--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -31,7 +31,7 @@ server {
         root           html;
         fastcgi_pass   php-fpm:9000;
         fastcgi_index  index.php;
-        fastcgi_param  SCRIPT_FILENAME  /usr/share/nginx/html$fastcgi_script_name;
+        fastcgi_param  SCRIPT_FILENAME  /var/www/html$fastcgi_script_name;
         include        fastcgi_params;
     }
 
