--- a/conf/conf.d/carad.conf
+++ b/conf/conf.d/carad.conf
@@ -4,11 +4,13 @@ server {
 
     #charset koi8-r;
     #access_log  /var/log/nginx/log/host.access.log  main;
+    root   /usr/share/nginx/html/carad/basic/web;
+    index  index.php index.html index.htm;
 
     location / {
-        root   /usr/share/nginx/html/carad/basic/web;
-        index  index.php index.html index.htm;
-    }
+            add_header Access-Control-Allow-Origin *;
+                    try_files $uri $uri/ /index.php?$args;
+            }
 
     #error_page  404              /404.html;
 
