--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,17 +1,23 @@
-
+#运行用户
 user  root;
+#启动进程,通常设置成和cpu的数量相等
 worker_processes  4;
 
+#全局错误日志及PID文件
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
-
+#工作模式及连接数上限
 events {
+    #epoll是多路复用IO(I/O Multiplexing)中的一种方式,但是仅用于linux2.6以上内核,可以大大提高nginx的性能
+    use   epoll;
+    #单个后台worker process进程的最大并发链接数
     worker_connections  1024;
 }
 
 
 http {
+     #设定mime类型,类型由mime.type文件定义
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
@@ -27,6 +33,15 @@ http {
     keepalive_timeout  65;
 
     gzip  on;
+	gzip_disable "msie6";
+	# gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
+    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+
+
 
     include /etc/nginx/conf.d/*.conf;
 }
