--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -29,6 +29,10 @@ http {
 
     sendfile        on;
     #tcp_nopush     on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
 
     keepalive_timeout  65;
 
