--- a/conf/conf.d/carad.conf
+++ b/conf/conf.d/carad.conf
@@ -30,8 +30,7 @@ server {
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     location ~ \.php$ {
-        root           web;
-        fastcgi_pass   php-fpm:9000;
+        fastcgi_pass   139.224.28.249:9000;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  /var/www/html/carad/basic/web$fastcgi_script_name;
         include        fastcgi_params;
